--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,53 +1,21 @@
-# Python CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-python/ for more details
-#
 version: 2.1
+
+orbs:
+  python: circleci/python@0.2.1
+
 jobs:
-
-  build:
-
-    docker:
-      - image: circleci/python:latest
-
-    working_directory: ~/QAlenium-Python
-
+  build-and-test:
+    executor: python/default
     steps:
       - checkout
-
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "requirements.txt" }}
-            - v1-dependencies-
-
+      - python/load-cache
+      - python/install-deps
+      - python/save-cache
       - run:
-          name: install dependencies
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install -r requirements.txt
-
-      - save_cache:
-          paths:
-            - ./venv
-          key: v1-dependencies-{{ checksum "requirements.txt" }}
-
-      - run:
-          name: run tests
-          command: |
-            . venv/bin/activate
-            python ./src/br/com/framework/testing/test.py
-
-      - store_artifacts:
-          path: test-reports
-          destination: test-reports
-          
-      - sonarcloud/scan
-orbs:
-  sonarcloud: sonarsource/sonarcloud@1.0.1
+          command: ./manage.py test
+          name: Test
 
 workflows:
   main:
     jobs:
-      - build:
-          context: SonarCloud
+      - build-and-test
